# src/lib/DataType/Factory.php
@@ -132,6 +132,7 @@ class Factory extends ResourceFactory
      */
     public function update(DataTypeInterface $resource, array $data): bool
     {
+        $data['name'] = $resource->getName();
         $data = Validator::validate($data);
 
         return $this->updateIn($this->db->{self::COLLECTION_NAME}, $resource->getId(), $data);
